modified:   assets/css/style.css new file:   blog.html modified:   index.html

--- a/index.html
+++ b/index.html
@@ -40,13 +40,10 @@
       <div class="row justify-content-center">
         <div class="col-xl-9 d-flex align-items-center justify-content-lg-between">
           <h1 class="logo me-auto me-lg-0"><a href="index.html">Hayot Istamov</a></h1>
-          <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-
           <nav id="navbar" class="navbar order-last order-lg-0">
             <ul>
               <li><a class="nav-link scrollto active" href="#hero">Главная</a></li>
               <li><a class="nav-link scrollto" href="#about">Обо мне</a></li>
-              <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
               <li><a class="nav-link scrollto " href="#portfolio">Портфолио</a></li>
               <li><a class="nav-link scrollto" href="#contact">Контакты</a></li>
             </ul>
@@ -54,7 +51,7 @@
           </nav>
           <!-- .navbar -->
 
-          <a href="https://youtube.com/channel/UCGV7NW7SS8oz1ZYP6iyTX3Q" class="get-started-btn scrollto" target="_blank">Youtube</a>
+          <a href="/public/blog.html" class="get-started-btn scrollto">Blog</a>
         </div>
       </div>
 
@@ -93,6 +90,46 @@
     </section>
     <!-- End About Us Section -->
 
+    <!-- ======= Carousel Section ======= -->
+    <!-- <div id="carouselExampleDark" class="carousel carousel-dark slide ">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="/public/assets/img/cta-bg.jpg" class="d-block w-100" alt="Unilever">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/public/assets/img/portfolio/portfolio-4.jpg" class="d-block w-100" alt="президентская стипендия">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="/public/assets/img/portfolio/portfolio-7.jpg" class="d-block w-100" alt="президентская стипендия">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div> -->
+    <!-- End Carousel Section -->
 
     <!-- ======= Cta Section ======= -->
     <section id="cta" class="cta">
