changed url for blog

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           </nav>
           <!-- .navbar -->
 
-          <a href="/public/blog.html" class="get-started-btn scrollto">Blog</a>
+          <a href="/blog.html" class="get-started-btn scrollto">Blog</a>
         </div>
       </div>
 
